--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
             <div class="first-floor">
                 <div class="mask-color-filter">
                     <div class="profile-clip">
-                        <img src="images/profile.png" alt="">
+                        <img src="images/profile.png" alt="profile">
                         <div class="eyes">
                             <div class="on">
                                 <div class="me"></div>
@@ -801,43 +801,9 @@
                     </div>
                     <div class="row swiper-slide">
                         <div id="contents-wrapper">
-
-                            <article>
-                                <div class="left-side">
-                                    <div class="thumbnail">
-                                        <img src="images/AppleiMac.png" alt="imac">
-                                    </div>
-                                </div>
-                                <div class="right-side">
-                                    <div class="work-info">
-                                        <span>
-                                            <h2>프로젝트 333개요</h2>
-                                            <p>프로젝트 개요입니다.</p>
-                                        </span>
-                                        <span>
-                                            <h2>작업기간</h2>
-                                            <p>2022.8.23 ~ 2022.8.24</p>
-                                        </span>
-                                        <span>
-                                            <h2>작업기여도</h2>
-                                            <p>기여도 100% (개인작업)</p>
-                                        </span>
-                                        <span>
-                                            <h2>사용기술</h2>
-                                            <p>HTML CSS Javascript jQuery Photoshop</p>
-                                        </span>
-                                    </div>
-                                    <div class="detail-btn-group">
-                                        <button id="readme">
-                                            <a href="https://github.com/wb96choi/hyein_bin">README</a>
-
-                                        </button>
-                                        <button id="gotogit">
-                                            <a href="https://wb96choi.github.io/hyein_bin/">Github</a>
-
-                                        </button>
-                                    </div>
-                                </div>
+                            <article class="notyet">
+                                <h1>준비중입니다.</h1>
+                                <img src="images/warning.png" alt="준비중입니다.">
                             </article>
                         </div>
                     </div>
@@ -894,85 +860,17 @@
                     </div>
                     <div class="row swiper-slide">
                         <div id="contents-wrapper">
-
-                            <article>
-                                <div class="left-side">
-                                    <div class="thumbnail">
-                                        <img src="images/AppleiMac.png" alt="imac">
-                                    </div>
-                                </div>
-                                <div class="right-side">
-                                    <div class="work-info">
-                                        <span>
-                                            <h2>2222222222프로젝트 개요</h2>
-                                            <p>프로젝트 개요입니다.</p>
-                                        </span>
-                                        <span>
-                                            <h2>작업기간</h2>
-                                            <p>2022.8.23 ~ 2022.8.24</p>
-                                        </span>
-                                        <span>
-                                            <h2>작업기여도</h2>
-                                            <p>기여도 100% (개인작업)</p>
-                                        </span>
-                                        <span>
-                                            <h2>사용기술</h2>
-                                            <p>HTML CSS Javascript jQuery Photoshop</p>
-                                        </span>
-                                    </div>
-                                    <div class="detail-btn-group">
-                                        <button id="readme">
-                                            <a href="https://github.com/wb96choi/hyein_bin">README</a>
-
-                                        </button>
-                                        <button id="gotogit">
-                                            <a href="https://wb96choi.github.io/hyein_bin/">Github</a>
-
-                                        </button>
-                                    </div>
-                                </div>
+                            <article class="notyet">
+                                <h1>준비중입니다.</h1>
+                                <img src="images/warning.png" alt="준비중입니다.">
                             </article>
                         </div>
                     </div>
                     <div class="row swiper-slide">
                         <div id="contents-wrapper">
-
-                            <article>
-                                <div class="left-side">
-                                    <div class="thumbnail">
-                                        <img src="images/AppleiMac.png" alt="imac">
-                                    </div>
-                                </div>
-                                <div class="right-side">
-                                    <div class="work-info">
-                                        <span>
-                                            <h2>프로젝트 333개요</h2>
-                                            <p>프로젝트 개요입니다.</p>
-                                        </span>
-                                        <span>
-                                            <h2>작업기간</h2>
-                                            <p>2022.8.23 ~ 2022.8.24</p>
-                                        </span>
-                                        <span>
-                                            <h2>작업기여도</h2>
-                                            <p>기여도 100% (개인작업)</p>
-                                        </span>
-                                        <span>
-                                            <h2>사용기술</h2>
-                                            <p>HTML CSS Javascript jQuery Photoshop</p>
-                                        </span>
-                                    </div>
-                                    <div class="detail-btn-group">
-                                        <button id="readme">
-                                            <a href="https://github.com/wb96choi/hyein_bin">README</a>
-
-                                        </button>
-                                        <button id="gotogit">
-                                            <a href="https://wb96choi.github.io/hyein_bin/">Github</a>
-
-                                        </button>
-                                    </div>
-                                </div>
+                            <article class="notyet">
+                                <h1>준비중입니다.</h1>
+                                <img src="images/warning.png" alt="준비중입니다.">
                             </article>
                         </div>
                     </div>
@@ -1027,85 +925,17 @@
                     </div>
                     <div class="row swiper-slide">
                         <div id="contents-wrapper">
-
-                            <article>
-                                <div class="left-side">
-                                    <div class="thumbnail">
-                                        <img src="images/AppleiMac.png" alt="imac">
-                                    </div>
-                                </div>
-                                <div class="right-side">
-                                    <div class="work-info">
-                                        <span>
-                                            <h2>2222222222프로젝트 개요</h2>
-                                            <p>프로젝트 개요입니다.</p>
-                                        </span>
-                                        <span>
-                                            <h2>작업기간</h2>
-                                            <p>2022.8.23 ~ 2022.8.24</p>
-                                        </span>
-                                        <span>
-                                            <h2>작업기여도</h2>
-                                            <p>기여도 100% (개인작업)</p>
-                                        </span>
-                                        <span>
-                                            <h2>사용기술</h2>
-                                            <p>HTML CSS Javascript jQuery Photoshop</p>
-                                        </span>
-                                    </div>
-                                    <div class="detail-btn-group">
-                                        <button id="readme">
-                                            <a href="https://github.com/wb96choi/hyein_bin">README</a>
-
-                                        </button>
-                                        <button id="gotogit">
-                                            <a href="https://wb96choi.github.io/hyein_bin/">Github</a>
-
-                                        </button>
-                                    </div>
-                                </div>
+                            <article class="notyet">
+                                <h1>준비중입니다.</h1>
+                                <img src="images/warning.png" alt="준비중입니다.">
                             </article>
                         </div>
                     </div>
                     <div class="row swiper-slide">
                         <div id="contents-wrapper">
-
-                            <article>
-                                <div class="left-side">
-                                    <div class="thumbnail">
-                                        <img src="images/AppleiMac.png" alt="imac">
-                                    </div>
-                                </div>
-                                <div class="right-side">
-                                    <div class="work-info">
-                                        <span>
-                                            <h2>프로젝트 333개요</h2>
-                                            <p>프로젝트 개요입니다.</p>
-                                        </span>
-                                        <span>
-                                            <h2>작업기간</h2>
-                                            <p>2022.8.23 ~ 2022.8.24</p>
-                                        </span>
-                                        <span>
-                                            <h2>작업기여도</h2>
-                                            <p>기여도 100% (개인작업)</p>
-                                        </span>
-                                        <span>
-                                            <h2>사용기술</h2>
-                                            <p>HTML CSS Javascript jQuery Photoshop</p>
-                                        </span>
-                                    </div>
-                                    <div class="detail-btn-group">
-                                        <button id="readme">
-                                            <a href="https://github.com/wb96choi/hyein_bin">README</a>
-
-                                        </button>
-                                        <button id="gotogit">
-                                            <a href="https://wb96choi.github.io/hyein_bin/">Github</a>
-
-                                        </button>
-                                    </div>
-                                </div>
+                            <article class="notyet">
+                                <h1>준비중입니다.</h1>
+                                <img src="images/warning.png" alt="준비중입니다.">
                             </article>
                         </div>
                     </div>
@@ -1128,85 +958,17 @@
                     </div>
                     <div class="row swiper-slide">
                         <div id="contents-wrapper">
-
-                            <article>
-                                <div class="left-side">
-                                    <div class="thumbnail">
-                                        <img src="images/AppleiMac.png" alt="imac">
-                                    </div>
-                                </div>
-                                <div class="right-side">
-                                    <div class="work-info">
-                                        <span>
-                                            <h2>2222222222프로젝트 개요</h2>
-                                            <p>프로젝트 개요입니다.</p>
-                                        </span>
-                                        <span>
-                                            <h2>작업기간</h2>
-                                            <p>2022.8.23 ~ 2022.8.24</p>
-                                        </span>
-                                        <span>
-                                            <h2>작업기여도</h2>
-                                            <p>기여도 100% (개인작업)</p>
-                                        </span>
-                                        <span>
-                                            <h2>사용기술</h2>
-                                            <p>HTML CSS Javascript jQuery Photoshop</p>
-                                        </span>
-                                    </div>
-                                    <div class="detail-btn-group">
-                                        <button id="readme">
-                                            <a href="https://github.com/wb96choi/hyein_bin">README</a>
-
-                                        </button>
-                                        <button id="gotogit">
-                                            <a href="https://wb96choi.github.io/hyein_bin/">Github</a>
-
-                                        </button>
-                                    </div>
-                                </div>
+                            <article class="notyet">
+                                <h1>준비중입니다.</h1>
+                                <img src="images/warning.png" alt="준비중입니다.">
                             </article>
                         </div>
                     </div>
                     <div class="row swiper-slide">
                         <div id="contents-wrapper">
-
-                            <article>
-                                <div class="left-side">
-                                    <div class="thumbnail">
-                                        <img src="images/AppleiMac.png" alt="imac">
-                                    </div>
-                                </div>
-                                <div class="right-side">
-                                    <div class="work-info">
-                                        <span>
-                                            <h2>프로젝트 333개요</h2>
-                                            <p>프로젝트 개요입니다.</p>
-                                        </span>
-                                        <span>
-                                            <h2>작업기간</h2>
-                                            <p>2022.8.23 ~ 2022.8.24</p>
-                                        </span>
-                                        <span>
-                                            <h2>작업기여도</h2>
-                                            <p>기여도 100% (개인작업)</p>
-                                        </span>
-                                        <span>
-                                            <h2>사용기술</h2>
-                                            <p>HTML CSS Javascript jQuery Photoshop</p>
-                                        </span>
-                                    </div>
-                                    <div class="detail-btn-group">
-                                        <button id="readme">
-                                            <a href="https://github.com/wb96choi/hyein_bin">README</a>
-
-                                        </button>
-                                        <button id="gotogit">
-                                            <a href="https://wb96choi.github.io/hyein_bin/">Github</a>
-
-                                        </button>
-                                    </div>
-                                </div>
+                            <article class="notyet">
+                                <h1>준비중입니다.</h1>
+                                <img src="images/warning.png" alt="준비중입니다.">
                             </article>
                         </div>
                     </div>
