--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <li class="idc-about"><a href="#About">About me</a></li>
                     <li class="idc-work"><a href="#Work">Work</a></li>
                     <li class="idc-contact"><a href="#Contact">Contact</a></li>
-                    <li><a href="https://github.com/wb96choi"><img class="github" src="images/github.svg"
+                    <li><a href="https://github.com/wb96choi"  target="_blank"><img class="github" src="images/github.svg"
                                 alt="Github"></a></li>
                 </ul>
             </nav>
@@ -73,7 +73,7 @@
                     <li class="idc-about"><a href="#About">About me</a></li>
                     <li class="idc-work"><a href="#Work">Work</a></li>
                     <li class="idc-contact"><a href="#Contact">Contact</a></li>
-                    <li><a href="https://github.com/wb96choi">github</a></li>
+                    <li><a href="https://github.com/wb96choi" target="_blank">github</a></li>
                 </ul>
             </div>
         </header>
@@ -750,7 +750,7 @@
                                             상세보기
                                         </button>
                                         <button id="gotogit">
-                                            <a href="https://wb96choi.github.io/hyein_bin/">Github</a>
+                                            <a href="https://wb96choi.github.io/hyein_bin/" target="_blank">Github</a>
 
                                         </button>
                                     </div>
@@ -791,7 +791,7 @@
                                             상세보기
                                         </button>
                                         <button id="gotogit">
-                                            <a href="https://github.com/wb96choi/seongnam_team">Github</a>
+                                            <a href="https://github.com/wb96choi/seongnam_team" target="_blank">Github</a>
 
                                         </button>
                                     </div>
@@ -850,7 +850,7 @@
 
                                         </button>
                                         <button id="gotogit">
-                                            <a href="https://wb96choi.github.io/hyein_bin/">Github</a>
+                                            <a href="https://wb96choi.github.io/hyein_bin/" target="_blank">Github</a>
 
                                         </button>
                                     </div>
@@ -915,7 +915,7 @@
                                             상세보기
                                         </button>
                                         <button id="gotogit">
-                                            <a href="https://wb96choi.github.io/audio_techinica_teamproject/">Github</a>
+                                            <a href="https://wb96choi.github.io/audio_techinica_teamproject/" target="_blank">Github</a>
 
                                         </button>
                                     </div>
@@ -952,7 +952,7 @@
 
                             <article>
                                 <iframe width="100%" src="https://wb96choi.github.io/real_bmoproject/"></iframe>
-                                <div class="detail"><a href="https://github.com/wb96choi/real_bmoproject">자세히 보기</a></div>
+                                <div class="detail"><a href="https://github.com/wb96choi/real_bmoproject" target="_blank">자세히 보기</a></div>
                             </article>
                         </div>
                     </div>
@@ -1008,11 +1008,11 @@
                     <div class="text">E-mail.</div>
                     <div class="text-hidden">메일문의</div>
                 </a>
-                <a href="https://open.kakao.com/o/sVpp8Gxe">
+                <a href="https://open.kakao.com/o/sVpp8Gxe" target="_blank">
                     <div class="text">Kakao.</div>
                     <div class="text-hidden">오픈채팅</div>
                 </a>
-                <a href="https://github.com/wb96choi"><img class="github" src="images/github.svg" alt="Github"></a>
+                <a href="https://github.com/wb96choi" target="_blank"><img class="github" src="images/github.svg" alt="Github"></a>
             </div>
         </section>
         <!--Contact 섹션-->
