--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                 <ul id="menu">
                     <li class="idc-home on"><a href="#Home">Home</a></li>
                     <li class="idc-about"><a href="#About">About me</a></li>
+                    <li class="idc-skill"><a href="#Skill">Skill</a></li>
                     <li class="idc-work"><a href="#Work">Work</a></li>
                     <li class="idc-contact"><a href="#Contact">Contact</a></li>
                     <li><a href="https://github.com/wb96choi"  target="_blank"><img class="github" src="images/github.svg"
@@ -73,6 +74,7 @@
                 <ul class="gnb">
                     <li class="idc-home on"><a href="#Home">Home</a></li>
                     <li class="idc-about"><a href="#About">About me</a></li>
+                    <li class="idc-skill"><a href="#Skill">Skill</a></li>
                     <li class="idc-work"><a href="#Work">Work</a></li>
                     <li class="idc-contact"><a href="#Contact">Contact</a></li>
                     <li><a href="https://github.com/wb96choi" target="_blank">github</a></li>
@@ -609,7 +611,7 @@
 
 
 
-        <div class="second-floor">
+        <div class="second-floor" id="Skill">
             <div class="bar-deco-right" data-aos="slide-left" data-aos-duration="1000">
 
             </div>
