크로스브라우징멘트

--- a/index.html
+++ b/index.html
@@ -561,6 +561,7 @@
                 <h1 data-aos="fade-left" data-aos-duration="3000">노력하는 사람에겐 행운이 따라온다.</h1>
                 <h2 data-aos="fade-left" data-aos-duration="3000" data-aos-delay="200">안녕하세요. <br><span>운좋은 웹퍼블리셔 최원빈입니다.</span></h2>
             </article>
+            <p class="recommend-browser">이 사이트는 Chrome 최신 브라우저에 최적화 되어있습니다.</p>
         </main>
 
         <!--Home 섹션-->
