--- a/index.html
+++ b/index.html
@@ -726,6 +726,9 @@
                                 <div class="left-side">
                                     <div class="thumbnail">
                                         <img src="work-image/nisimura.png" alt="니시무라 중공업 리뉴얼사이트 썸네일">
+                                        <div class="cross-browser">
+                                            <img src="images/chrome_icon.svg" alt="크롬에서 실행하시길 권장드립니다.">
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="right-side">
@@ -767,6 +770,9 @@
                                 <div class="left-side">
                                     <div class="thumbnail">
                                         <img src="work-image/seongnam.png" alt="성남아트센터 리뉴얼사이트">
+                                        <div class="cross-browser">
+                                            <img src="images/chrome_icon.svg" alt="크롬에서 실행하시길 권장드립니다.">
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="right-side">
@@ -842,6 +848,9 @@
                                 <div class="left-side">
                                     <div class="thumbnail">
                                         <img src="work-image/at.png" alt="오디오테크니카 리뉴얼사이트 썸네일">
+                                        <div class="cross-browser">
+                                            <img src="images/chrome_icon.svg" alt="크롬에서 실행하시길 권장드립니다.">
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="right-side">
@@ -899,6 +908,7 @@
                                 <div class="left-side">
                                     <div class="thumbnail">
                                         <img src="work-image/bmoproject_thumb.gif" alt="디지털 시계 프로젝트">
+
                                     </div>
                                 </div>
                                 <div class="right-side">
@@ -949,6 +959,7 @@
             </div>
 
             <div class="modal-shadow">
+                <button id="close"><i class="bi bi-x-lg"></i></button>
                 <div class="modal-title"></div>
                 <div id="work-modal">
                     <img class="nisimura" src="work-image/nisimura-detailpage.jpg" alt="니시무라 상세보기">
